mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts-db
spec:
  selector:
    matchLabels:
      app: carts-db
  template:
    metadata:
      labels:
        app: carts-db
    spec:
      containers:
        - name: mongodb
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: carts-db
spec:
  selector:
    app: carts-db
  ports:
    - port: 27017
      targetPort: 27017
