catalogue-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue
      version: v2
  template:
    metadata:
      labels:
        app: catalogue
        version: v2
    spec:
      containers:
        - name: catalogue
          image: abdvswmdr/soqonicatalogue:latest
          imagePullPolicy: Always
          command: ["/app"]
          args:
            - "-port=80"
            - "-DSN=$(DB_DSN)"
          ports:
            - containerPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: catalogue
spec:
  host: catalogue
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalogue
spec:
  hosts:
  - catalogue
  http:
  - route:
    - destination:
        host: catalogue
        subset: v1
      weight: 90
    - destination:
        host: catalogue
        subset: v2
      weight: 10
