ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soqoni-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /catalogue
            pathType: Prefix
            backend:
              service:
                name: catalogue
                port:
                  number: 80
          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: carts
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8079
